[package]
name = "trustdidweb-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library implementing the DID:TDW (TrustDIDWeb) specification"
license = "Apache-2.0"
readme = "README.md"
keywords = ["did", "decentralized", "identity", "web", "trust"]

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base58 = "0.2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde_with = "3.9.0"
serde_json_canonicalizer = "0.3"
multihash = "0.19.1"
reqwest = { version = "0.12.7", features = ["json"] }
url = "2.5.2"
aries-askar = "0.3.1"
tokio = { version = "1.0", features = ["full", "test-util"] }
uuid = { version = "1.10.0", features = ["v4"] }